# UCML

./: .gitignore  UCdata.p  data_generation.py  generate_case.py  helpers.py  model.py  requirements.txt  run_bench.py  solver.py
Separators/python/: demand_cover.py  min_generation_cover_py.py  minupdown_py.py
scripts/: run_bench.py
separators/: CMakeLists.txt
separators/python/: demand_cover_py.py  min_generation_cover_py.py  minupdown.py
